--- a/_notebooks/2022-08-22-TP110-python_hello.ipynb
+++ b/_notebooks/2022-08-22-TP110-python_hello.ipynb
@@ -39,9 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World!\")"
    ]
@@ -64,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a greeting: hola\n",
+      "hola\n"
+     ]
+    }
+   ],
    "source": [
     "msg = input(\"Enter a greeting: \")\n",
     "print(msg)"
@@ -98,9 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Name the Python output command mentioned in this lesson?\n",
+      "print\n",
+      "Answer: print\n",
+      "Question: If you see an ordered list of commands, what would you call it?\n",
+      "sequence\n",
+      "Answer: sequence\n",
+      "Question: Describe a keyword used in Python to define a function?\n",
+      "def\n",
+      "Answer: def\n"
+     ]
+    }
+   ],
    "source": [
     "def question_and_answer(prompt):\n",
     "    print(\"Question: \" + prompt)\n",
@@ -143,7 +176,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, nope1013 running /home/nope1013/anaconda3/bin/python\n",
+      "You will be asked 3 questions.\n",
+      "Question: Are you ready to take a test?\n",
+      "no\n",
+      "Answer: no\n",
+      "Question: What command is used to include other functions that are developed?\n",
+      "import\n",
+      "import is correct!\n",
+      "Question: What command in this example is used to evaluate a response?\n"
+     ]
+    }
+   ],
    "source": [
     "import getpass, sys\n",
     "\n",
@@ -211,7 +260,7 @@
    "hash": "8b82d5009c68ba5675978267e2b13a671f2a7143d61273c5a3813c97e0b2493d"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -226,8 +275,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
