--- a/_notebooks/2022-08-22-TT110-bash_tutorial.ipynb
+++ b/_notebooks/2022-08-22-TT110-bash_tutorial.ipynb
@@ -42,13 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using conditional statement to create a project directory and project\n",
+      "Directory /home/nope1013/vscode exists.\n",
+      "Directory /home/nope1013/vscode/APCSP exists.\n"
+     ]
+    }
+   ],
    "source": [
     "echo \"Using conditional statement to create a project directory and project\"\n",
     "\n",
@@ -93,13 +103,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Navigate to project, then navigate to area wwhere files were cloned\n",
+      "/home/nope1013/vscode/APCSP\n",
+      "\n",
+      "list top level or root of files with project pulled from github\n",
+      "\u001b[0m\u001b[01;32mGemfile\u001b[0m    \u001b[01;34m_action_files\u001b[0m    \u001b[01;34m_layouts\u001b[0m    \u001b[01;34m_posts\u001b[0m  \u001b[01;32mdocker-compose.yml\u001b[0m\n",
+      "LICENSE    _config.yml      \u001b[01;34m_notebooks\u001b[0m  \u001b[01;34m_sass\u001b[0m   \u001b[01;34mimages\u001b[0m\n",
+      "\u001b[01;32mMakefile\u001b[0m   \u001b[01;34m_fastpages_docs\u001b[0m  \u001b[01;34m_pages\u001b[0m      \u001b[01;34m_word\u001b[0m   index.html\n",
+      "\u001b[01;32mREADME.md\u001b[0m  \u001b[01;34m_includes\u001b[0m        \u001b[01;34m_plugins\u001b[0m    \u001b[01;34massets\u001b[0m  \u001b[01;34mpython\u001b[0m\n",
+      "\n",
+      "list again with hidden files pulled from github\n",
+      "\u001b[0m\u001b[01;34m.\u001b[0m                   .gitignore  \u001b[01;34m_action_files\u001b[0m    \u001b[01;34m_pages\u001b[0m    \u001b[01;32mdocker-compose.yml\u001b[0m\n",
+      "\u001b[01;34m..\u001b[0m                  \u001b[01;34m.vscode\u001b[0m     _config.yml      \u001b[01;34m_plugins\u001b[0m  \u001b[01;34mimages\u001b[0m\n",
+      ".devcontainer.json  \u001b[01;32mGemfile\u001b[0m     \u001b[01;34m_fastpages_docs\u001b[0m  \u001b[01;34m_posts\u001b[0m    index.html\n",
+      "\u001b[01;34m.git\u001b[0m                LICENSE     \u001b[01;34m_includes\u001b[0m        \u001b[01;34m_sass\u001b[0m     \u001b[01;34mpython\u001b[0m\n",
+      ".gitattributes      \u001b[01;32mMakefile\u001b[0m    \u001b[01;34m_layouts\u001b[0m         \u001b[01;34m_word\u001b[0m\n",
+      "\u001b[01;34m.github\u001b[0m             \u001b[01;32mREADME.md\u001b[0m   \u001b[01;34m_notebooks\u001b[0m       \u001b[01;34massets\u001b[0m\n",
+      "\n",
+      "list all files in long format\n",
+      "total 120\n",
+      "drwxr-xr-x 18 nope1013 nope1013  4096 Aug 19 12:12 \u001b[0m\u001b[01;34m.\u001b[0m\n",
+      "drwxr-xr-x  4 nope1013 nope1013  4096 Aug 23 11:53 \u001b[01;34m..\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013   420 Aug 19 12:12 .devcontainer.json\n",
+      "drwxr-xr-x  8 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34m.git\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013    84 Aug 19 12:12 .gitattributes\n",
+      "drwxr-xr-x  4 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m.github\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013   917 Aug 19 12:12 .gitignore\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34m.vscode\u001b[0m\n",
+      "-rwxr-xr-x  1 nope1013 nope1013  1304 Aug 19 12:12 \u001b[01;32mGemfile\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013 11351 Aug 19 12:12 LICENSE\n",
+      "-rwxr-xr-x  1 nope1013 nope1013  1422 Aug 19 12:12 \u001b[01;32mMakefile\u001b[0m\n",
+      "-rwxr-xr-x  1 nope1013 nope1013  3614 Aug 19 12:12 \u001b[01;32mREADME.md\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_action_files\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013  3716 Aug 19 12:12 _config.yml\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_fastpages_docs\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_includes\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_layouts\u001b[0m\n",
+      "drwxr-xr-x  4 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34m_notebooks\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34m_pages\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_plugins\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34m_posts\u001b[0m\n",
+      "drwxr-xr-x  3 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_sass\u001b[0m\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34m_word\u001b[0m\n",
+      "drwxr-xr-x  4 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34massets\u001b[0m\n",
+      "-rwxr-xr-x  1 nope1013 nope1013  1136 Aug 19 12:12 \u001b[01;32mdocker-compose.yml\u001b[0m\n",
+      "drwxr-xr-x  5 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34mimages\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013  1061 Aug 19 12:12 index.html\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34mpython\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# You must run cells above to define variable and project\n",
     "\n",
@@ -239,13 +303,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "show the secrets of .git\n",
+      "total 72\n",
+      "-rw-r--r--  1 nope1013 nope1013   382 Aug 25 11:34 COMMIT_EDITMSG\n",
+      "-rw-r--r--  1 nope1013 nope1013   353 Aug 25 11:44 FETCH_HEAD\n",
+      "-rw-r--r--  1 nope1013 nope1013    23 Aug 19 12:12 HEAD\n",
+      "-rw-r--r--  1 nope1013 nope1013    41 Aug 25 11:34 ORIG_HEAD\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:11 \u001b[0m\u001b[01;34mbranches\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013   269 Aug 19 12:12 config\n",
+      "-rw-r--r--  1 nope1013 nope1013    73 Aug 19 12:11 description\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:11 \u001b[01;34mhooks\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013 20261 Aug 25 11:34 index\n",
+      "drwxr-xr-x  2 nope1013 nope1013  4096 Aug 19 12:11 \u001b[01;34minfo\u001b[0m\n",
+      "drwxr-xr-x  3 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34mlogs\u001b[0m\n",
+      "drwxr-xr-x 12 nope1013 nope1013  4096 Aug 25 11:34 \u001b[01;34mobjects\u001b[0m\n",
+      "-rw-r--r--  1 nope1013 nope1013   271 Aug 19 12:12 packed-refs\n",
+      "drwxr-xr-x  5 nope1013 nope1013  4096 Aug 19 12:12 \u001b[01;34mrefs\u001b[0m\n",
+      "\n",
+      "look at config file\n",
+      "[core]\n",
+      "\trepositoryformatversion = 0\n",
+      "\tfilemode = true\n",
+      "\tbare = false\n",
+      "\tlogallrefupdates = true\n",
+      "[remote \"origin\"]\n",
+      "\turl = https://github.com/nighthawkcoders/APCSP.git\n",
+      "\tfetch = +refs/heads/*:refs/remotes/origin/*\n",
+      "[branch \"master\"]\n",
+      "\tremote = origin\n",
+      "\tmerge = refs/heads/master\n"
+     ]
+    }
+   ],
    "source": [
     "# This command has dependencies on project\n",
     "\n",
