--- a/_notebooks/2022-09-05-TT130-js_tutorial.ipynb
+++ b/_notebooks/2022-09-05-TT130-js_tutorial.ipynb
@@ -37,8 +37,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 2.7.18 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python2 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "console.log(\"Hello, World!\");"
    ]
@@ -56,7 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "var msg = \"Hello, World!\";\n",
@@ -78,7 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "function logIt(output) {\n",
@@ -100,7 +123,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "console.log(\"Reuse of logIT\")\n",
@@ -119,7 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "function logItType(output) {\n",
@@ -145,7 +176,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "// define a function to hold data for a Person\n",
@@ -190,7 +225,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "// define a student Array of Person(s)\n",
@@ -243,7 +282,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "// define an HTML conversion \"method\" associated with Classroom\n",
@@ -296,17 +339,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Python 2.7.18 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
-   "version": "16.13.0"
+   "name": "python",
+   "version": "2.7.18"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e55666fbbf217aa3df372b978577f47b6009e2f78e2ec76a584f49cd54a1e62c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
